--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "recepies",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -31,6 +30,7 @@
     "gulp-svgstore": "^9.0.0",
     "gulp-webp": "^4.0.1",
     "postcss": "^8.4.5",
-    "sass": "^1.45.2"
-  }
+    "sass": "^1.47.0"
+  },
+  "description": ""
 }
