--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "gulp-csso": "^4.0.1",
     "gulp-debug": "^4.0.0",
     "gulp-file-include": "^2.3.0",
+    "gulp-image": "^6.3.1",
+    "gulp-imagemin": "^7.1.0",
     "gulp-plumber": "^1.2.1",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
